{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "fbe29594-6f54-969b-bfdc-89437cb232b1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "proxy_enabled": true,
                "servers": [
                  "168.63.129.16"
                ]
              }
            ],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/azureFirewalls/firewall-hub"
            ],
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "firewall-policy",
            "private_ip_ranges": [],
            "resource_group_name": "rg-lzaks-hub-weu",
            "rule_collection_groups": [
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy_group_deny"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Deny",
                "name": "app_rules_deny_yahoo_com_any_source",
                "priority": 100,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.yahoo.com"
                    ],
                    "destination_urls": [],
                    "name": "deny_yahoo_com",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "app_rules_allow_githubusercontent_any_source",
                "priority": 101,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "raw.githubusercontent.com"
                    ],
                    "destination_urls": [],
                    "name": "allow_githubusercontent_com",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy_group_deny",
            "name": "policy_group_deny",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.firewall_policy",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/publicIPAddresses/public-ip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.229.64.222",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public-ip-bastion",
            "resource_group_name": "rg-lzaks-hub-weu",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/publicIPAddresses/public-ip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.224.32.198",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public-ip-firewall",
            "resource_group_name": "rg-lzaks-hub-weu",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/routeTables/route-table-to-firewall/routes/route-to-firewall",
            "name": "route-to-firewall",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-lzaks-hub-weu",
            "route_table_name": "route-table-to-firewall",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_firewall_policy.firewall_policy",
            "azurerm_public_ip.public_ip_firewall",
            "azurerm_public_ip.public_ip_firewall_mgmt",
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "azurerm_subnet.subnet_firewall",
            "azurerm_subnet.subnet_firewall_mgmt",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "location": "westeurope",
            "name": "route-table-to-firewall",
            "resource_group_name": "rg-lzaks-hub-weu",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewall",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm"
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-hub-weu",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-hub-weu",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm",
            "name": "subnet-vm",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-hub-weu",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm",
            "route_table_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bdbf59f0-82ab-4cbd-94dc-a9d577f570db",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "westeurope",
            "name": "vnet-hub",
            "resource_group_name": "rg-lzaks-hub-weu",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/26",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "172.16.1.0/27",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "172.16.2.0/26",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm",
                "name": "subnet-vm"
              }
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jumpbox_linux[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu-vm-linux/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "4bm15pnlqk4uzfg2vhkxp3lq1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-1F-3A",
            "name": "nic-vm",
            "private_ip_address": "172.16.2.5",
            "private_ip_addresses": [
              "172.16.2.5"
            ],
            "resource_group_name": "rg-lzaks-hub-weu-vm-linux",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu-vm-linux/providers/Microsoft.Compute/virtualMachines/vm-jumpbox-linux"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_hub",
            "module.vm_jumpbox_linux.azurerm_public_ip.pip_vm",
            "module.vm_jumpbox_linux.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jumpbox_windows[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu-vm-windows/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "4bm15pnlqk4uzfg2vhkxp3lq1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-88-7E-DD",
            "name": "nic-vm",
            "private_ip_address": "172.16.2.4",
            "private_ip_addresses": [
              "172.16.2.4"
            ],
            "resource_group_name": "rg-lzaks-hub-weu-vm-windows",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu-vm-windows/providers/Microsoft.Compute/virtualMachines/vm-jumpbox-win"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet_hub",
            "module.vm_jumpbox_windows.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}